welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: type mismatch;
 found   : Unit
 required: Boolean
	while(k<(nums.length-2)){
        ^