welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
	var k:Int = 0
	while(k<(nums.length-2)){
		if((nums(k)+5)==nums(k+1)  && (nums(k)-1)==nums(k+2)){
			return true
		}else{
			return false
		}
	}
}
